--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ a {
 .logo {
 	float:left;
 	width: 190px;
-	margin:5px 15px;
+	margin:5px 10px;
 	height: 24px;
 	background: transparent url(logo.png) no-repeat 0 0;
 	text-indent:-9999px;
@@ -100,6 +100,7 @@ input[type=radio] {
 form {
 	position:relative;
 	float:left;
+	margin:0 0 0 10px;
 }
 .inputhint {
 	position:absolute;
@@ -190,6 +191,7 @@ label.active {
 	width:99%;
 	text-align:center;
 	padding:1em 0;
+	display:none;
 }
 #footer a {
 	color:#fff;
